designed card and fix the alignments on the Movie List page

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,17 @@ body{
     min-width: 100%;
     padding-top: 4.5rem;
 }
+
+.welcome{
+    color:#222;
+}
+
+.text-justify{
+    text-align: justify;
+}
+
+.card-img-top{
+    width: 100%;
+    height: 25rem;
+    object-fit: cover;
+}
